--- a/style.css
+++ b/style.css
@@ -35,10 +35,11 @@ body {
 
 .card-wrap {
   background: hsl(217, 19%, 24%);
-    color: #d9d2d2;
+    color: hsl(193, 38%, 86%);
     padding: 1rem;
     text-align: center;
     border-radius: 1rem;
+    position: relative;
 }
 
 span {
@@ -55,11 +56,15 @@ span {
     cursor: pointer;
 }
 
+.icon {
+    background: hsl(150, 100%, 66%);
+    
+}
 
 
 
 
-@media (min-width:650px) {
+@media (min-width:750px) {
     body {
         background: red;
     }
