--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ body {
     font-size: 1.4rem;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .card {
     padding: 2rem;
 }
@@ -56,9 +61,15 @@ span {
     cursor: pointer;
 }
 
+.icon img {
+    display: flex;
+}
+
 .icon {
     background: hsl(150, 100%, 66%);
-    
+    border-radius: 50%;
+    width: 50px;
+    height: 50px; 
 }
 
 
