--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     height: 100vh;
     font-family: "Manrope", sans-serif;
     font-size: 1.4rem;
-    position: relative;
+    /* position: relative; */
 }
 
 img {
@@ -47,7 +47,7 @@ img {
     text-align: center;
     border-radius: 1rem;
     position: relative;
-  
+    
 }
 
 span {
@@ -77,8 +77,8 @@ span {
     justify-content: center;
     align-items: center; 
     position: absolute;
-    left: 160px;
-    bottom: 220px;
+    left: 185px;
+    bottom: -30px;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -101,11 +101,23 @@ span {
 
 }
 
+/* Other Mobile */
+
+/* @media (min-width:550px) {
+    .icon-btn {
+     left: 434px;
+     bottom: 340px;
+    }
+ } */
+
+
+
+
 
 @media (min-width:750px) {
    .icon-btn {
     left: 434px;
-    bottom: -30px;
+    bottom: 340px;
    }
 }
 
