--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img {
     text-align: center;
     border-radius: 1rem;
     position: relative;
-    
+    /* max-width: 800px; */
 }
 
 span {
@@ -101,23 +101,12 @@ span {
 
 }
 
-/* Other Mobile */
-
-/* @media (min-width:550px) {
-    .icon-btn {
-     left: 434px;
-     bottom: 340px;
-    }
- } */
-
-
-
 
 
 @media (min-width:750px) {
    .icon-btn {
-    left: 434px;
-    bottom: 340px;
+    left: 334px;
+    bottom: -40px;
    }
 }
 
